# sophie-lambda-option

./: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_README.md  DOCKER_TROUBLESHOOTING.md  Dockerfile  README.md  deploy.ps1  deploy.sh  deploy_enhanced.ps1  handler.py  optimized_handler.py  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml
scripts/: README.md  final_validation_summary.md  final_validation_test.py  fix_timestamp_serialization.py  input_size_test.py  integration_test.py  local_final_validation.py  local_test.py  optimize_handler.py  performance_optimization_summary.md  performance_test.py  profile_handler.py  simple_performance_test.py  simple_test_spx.py  test_spx_ticker.py
src/: __init__.py
src/models/: option_data.py
src/services/: __init__.py  data_processor.py  market_data_fetcher.py  optimized_data_processor.py  optimized_options_calculator.py  options_calculator.py  options_data_fetcher.py
src/utils/: calculation_utils.py  data_formatter.py  error_handling.py  expiration_selector.py  json_encoder.py  logging_utils.py  time_utils.py  (+1 more)
tests/: mock_data.py  test_additional_option_fields.py  test_calculation_utils.py  test_data_formatter.py  test_data_processor.py  test_data_processor_filtered_expirations.py  test_data_processor_integration.py  test_enhanced_iv_calculations.py  test_error_handling.py  test_expiration_selector.py  test_handler_error_scenarios.py  test_handler_integration.py  test_handler_integration_enhanced.py  test_handler_integration_mock.py  test_logging_utils.py  test_market_data_fetcher.py  test_mock_data.py  test_moneyness_calculation_filtering.py  test_option_data.py  test_options_calculator.py  test_options_data_fetcher.py  test_options_data_fetcher_filtered.py  test_time_utils.py
(+6 files in other folders)
