[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "options-analytics-api"
version = "0.1.0"
description = "Serverless backend for options analytics with implied volatility calculations"
authors = [{name = "Developer", email = "dev@example.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2.65",
    "py_vollib>=1.0.1",
    "pandas>=2.2.0",
    "numpy>=1.26.4",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "pytz>=2024.1",
    "urllib3>=2.2.0",
    "lxml>=5.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]